--- a/package.json
+++ b/package.json
@@ -28,16 +28,17 @@
   },
   "dependencies": {
     "joi":"9.0.4",
-    "ut-bus": "~5.4.7",
+    "ut-bus": "~5.4.8",
     "ut-error": "~5.3.14",
+    "ut-port-http":"~6.3.0",
     "ut-port-httpserver":"~6.2.4",
-    "ut-port-postgres":"~5.4.0",
+    "ut-port-postgres":"~5.6.0",
     "ut-port-script":"~5.4.3",
-    "ut-run":"~6.0.2",
-    "pm2":"1.1.3"
+    "ut-run":"~6.1.1",
+    "pm2":"2.0.12"
   },
   "devDependencies": {
-    "blue-tape":"0.2.0",
+    "blue-tape":"1.0.0",
     "tap-xunit": "1.4.0",
     "ut-port-jsonrpc": "~5.5.0",
     "ut-port-performance": "~5.4.5",
