fix: issue #283 - DFSP License files are incorrect

--- a/package.json
+++ b/package.json
@@ -63,5 +63,5 @@
     "registry": "https://modusbox.jfrog.io/modusbox/api/npm/level1-npm-release"
   },
   "author": "Stamen Peev <stamen.peev@softwaregroup-bg.com>",
-  "license": "UNLICENSED"
+  "license": "SEE LICENSE IN LICENSE"
 }
