--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "dependencies": {
     "joi": "9.1.1",
-    "ut-port-httpserver": "^8.0.0",
+    "ut-port-httpserver": "8.1.1",
     "ut-port-jsonrpc": "^5.5.6",
     "ut-port-script": "^5.4.6",
     "ut-port-postgres": "^5.7.3",
@@ -49,7 +49,7 @@
   "devDependencies": {
     "blue-tape": "1.0.0",
     "tap-xunit": "1.4.0",
-    "ut-tools": "^5.10.7"
+    "ut-tools": "^5.10.8"
   },
   "repository": {
     "type": "git",
