fix: remove shrinkwrap

--- a/package.json
+++ b/package.json
@@ -33,13 +33,13 @@
   },
   "dependencies": {
     "joi": "9.1.1",
-    "ut-port-httpserver": "8.7.1",
+    "ut-port-httpserver": "~8.7.1",
     "ut-port-jsonrpc": "^5.6.4",
     "ut-port-script": "^5.5.1",
     "ut-port-postgres": "^5.7.7",
     "ut-cache": "^5.5.3",
     "ut-port-performance": "^5.4.7",
-    "ut-port-console": "^6.2.5",
+    "ut-port-console": "~6.2.13",
     "ut-run": "^8.1.0",
     "ut-bus": "^5.9.0",
     "ut-error": "^5.4.2",
