--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "ut-port-performance": "^5.4.7",
     "ut-port-console": "~6.2.13",
     "ut-run": "^8.1.0",
-    "ut-bus": ">=5.12.0-perf.2 <5.12.0",
+    "ut-bus": "^5.12.1",
     "ut-error": "^5.4.2",
     "ut-port-http": "^6.4.1",
     "ws": "1.1.1",
