fix: remove shrinkwrap file

--- a/package.json
+++ b/package.json
@@ -33,20 +33,20 @@
   },
   "dependencies": {
     "joi": "9.1.1",
+    "pm2": "2.0.18",
+    "ut-bus": "^5.12.1",
+    "ut-cache": "^5.5.3",
+    "ut-error": "^5.4.2",
+    "ut-log-dfsp": "^5.0.1",
+    "ut-port-console": "~6.2.13",
+    "ut-port-http": "^6.4.1",
     "ut-port-httpserver": "~8.11.4",
     "ut-port-jsonrpc": "^5.6.4",
-    "ut-port-script": "^5.5.1",
-    "ut-port-postgres": "^5.7.7",
-    "ut-cache": "^5.5.3",
     "ut-port-performance": "^5.4.7",
-    "ut-port-console": "~6.2.13",
+    "ut-port-postgres": "^5.7.7",
+    "ut-port-script": "^5.5.1",
     "ut-run": "^8.1.0",
-    "ut-bus": "^5.12.1",
-    "ut-error": "^5.4.2",
-    "ut-port-http": "^6.4.1",
-    "ws": "1.1.1",
-    "pm2": "2.0.18",
-    "ut-log-dfsp": "^5.0.1"
+    "ws": "1.1.1"
   },
   "devDependencies": {
     "blue-tape": "1.0.0",
