--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "devDependencies": {
     "blue-tape": "1.0.0",
+    "supertest": "^3.0.0",
     "tap-xunit": "1.4.0",
     "ut-tools": "^5.17.19"
   },
